--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -34,6 +34,11 @@
   </div>
 
   <div>
+    <%= form.label :tag_list, '標籤：'%>
+    <%= form.text_field :tag_list, placeholder:'aaa, bbb, ccc'%>
+  </div>
+
+  <div>
       <%= form.submit button_text,class:'btn btn-danger btn-lg' %> 
       <%= link_to "取消", root_path, class: 'btn btn-success btn-lg' %>
   </div>
