--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,15 +4,15 @@
 <% @tasks.each do |task| %>
   <ul>
     <li>
-      任務名稱:<%= link_to task.title, task_path(task) %>
-      任務描述:<%= task.description %>
-      優先等級:<%= task.priority %>
-      任務狀態:<%= task.status %>
-      開始時間：<%= task.start_time%>
-      截止時間：<%= task.end_time%>
+      任務名稱: <%= link_to task.title, task_path(task) %>
+      任務描述: <%= task.description %>
+      優先等級: <%= task.priority %>
+      任務狀態: <%= task.status %>
+      標籤: <%= task.tag_list %>
+      開始時間: <%= task.start_time%>
+      截止時間: <%= task.end_time%>
       <%= link_to "更新", edit_task_path(task), class: 'btn btn-success btn-sm' %>
       <%= link_to "刪除", task_path(task), method: 'delete', data: {confirm: '確定要刪除嗎？'}, class: 'btn btn-dark btn-sm' %>
-
     </li>
   </ul>
 <% end %>
