--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,7 +4,7 @@
 <% @tasks.each do |task| %>
   <ul>
     <li>
-      <%= t('views.tasks.title') %> <%= link_to task.title, task_path(task) %>
+      <%= t('views.tasks.title') %> <%= link_to task.title, task_path(task), class: 'title' %>
       <%= t('views.tasks.description') %> <%= task.description %>
       <%= t('views.tasks.priority') %>: <%= task_priority(task.priority) %>
       <%= t('views.tasks.status') %> <%= task_status(task.status) %>
